hermes/service.yaml
---
{
  apiVersion: "v1",
  kind: "Service",
  metadata: {
    name: "hermes",
    labels: {
      app: "hermes",
    },
  },
  spec: {
    selector: {
      app: "hermes",
    },
    ports: [{
      port: 9119,
      name: "dashboard",
    }, {
      port: 8644,
      name: "webhook",
    }],
  },
}
